[metadata]
name = heliosat
author = Andreas J. Weiss
author_email = ajefweiss@gmail.com
description = A simple and small python package for handling and processing heliospheric satellite data
url = https://github.com/ajefweiss/HelioSat
version = attr: heliosat.__version__
keywords =
    astrophysics
    solar physics
    space weather
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Physics
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
install_requires =
    beautifulsoup4
    cdflib>=0.3.19
    netcdf4>=1.6.2
    numpy
    requests
    requests-ftp>=0.3.1
    spiceypy>=5.1.2